--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
         <li><a href="./Information/carrot.html">Carrot</a></li> <img src="./Gallery/carrot.jpg"/>
         <li><a href="./Information/cucumber.html">Cucumber</a></li> <img src="./Gallery/cucumber.jpg"/>
     </ul>
+    <p>Source: Wikipedia</p>
 </body>
 </html>
